// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea should match snapshot -> counter 1`] = `
<scale-textarea counter="true">
  <div class="textarea">
    <label class="textarea__label" htmlfor="input-textarea2"></label><textarea class="textarea__control" id="input-textarea2" value=""></textarea>
    <span aria-hidden="true" class="textarea__label-safety-background"></span>
    <div aria-live="polite" aria-relevant="additions removals" class="textarea__meta" id="helper-message-3">
      <div class="textarea__counter">
        0 /
      </div>
    </div>
  </div>
</scale-textarea>
`;

exports[`Textarea should match snapshot -> helpertext 1`] = `
<scale-textarea helper-text="helpertext" status="error">
  <div class="textarea textarea--status-error">
    <label class="textarea__label" htmlfor="input-textarea1"></label><textarea aria-describedby="helper-message-2" aria-invalid="" class="textarea__control" id="input-textarea1" value=""></textarea>
    <span aria-hidden="true" class="textarea__label-safety-background"></span>
    <div aria-live="polite" aria-relevant="additions removals" class="textarea__meta" id="helper-message-2">
      <div class="textarea__helper-text">
        helpertext
      </div>
    </div>
  </div>
</scale-textarea>
`;

exports[`Textarea should match snapshot 1`] = `
<scale-textarea>
  <div class="textarea">
    <label class="textarea__label" htmlfor="input-textarea0"></label><textarea class="textarea__control" id="input-textarea0" value=""></textarea>
    <span aria-hidden="true" class="textarea__label-safety-background"></span>
  </div>
</scale-textarea>
`;
